--- a/package/Config.in
+++ b/package/Config.in
@@ -220,6 +220,7 @@ comment "Fonts"
 	source "package/ghostscript-fonts/Config.in"
 	source "package/inconsolata/Config.in"
 	source "package/liberation/Config.in"
+	source "package/noto-cjk/Config.in"
 	source "package/noto-emoji/Config.in"
 
 comment "Icons"
